--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://bestthe.github.io/Weather-App",
   "name": "weatherapp",
   "version": "0.1.0",
   "private": true,
@@ -11,13 +12,17 @@
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
+    "swiper": "^12.0.3",
+    "weather-icons": "^1.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
